// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Make sure input UI does not change unexpectedly 1`] = `
<div>
  <div
    class="wrapper-input"
  >
    <label
      class="label-input"
      for="input"
    >
      Label Text
    </label>
    <input
      class="storybook-input storybook-size-large "
      id="input"
      placeholder="Input Name"
      type="text"
    />
  </div>
</div>
`;

exports[`Make sure input UI does not change unexpectedly 2`] = `
<div>
  <div
    class="wrapper-input"
  >
    <label
      class="label-input"
      for="input"
    >
      Label Text
    </label>
    <input
      class="storybook-input storybook-size-medium "
      id="input"
      placeholder="Input Name"
      type="text"
    />
  </div>
</div>
`;
